# qbootctl

./: .clang-format  .gitignore  BootControl.cpp  BootControl.h  CMakeLists.txt  LICENSE  README.md  boot_control.h  boot_control_impl_qcom.cpp  bootctrl.h  bootctrl_impl.c  bootctrl_impl.cpp  bootctrl_test.c  bootctrl_test.cpp  crc32.c  crc32.h  gpt-utils.c  gpt-utils.cpp  gpt-utils.h  meson.build  qbootctl.c  qbootctl.cpp  ufs-bsg.c  ufs-bsg.cpp  ufs-bsg.h  utils.h
